auto-test/tests/chapter_18/invalid_parse/var_decl_bad_type_specifier.c
struct s;


struct s long a;

int main(void) {
    return 0;
}